crates/kermlc/tests/fixtures/valid/conjugation_chained.kerml
package ChainedConjugation {
    type A {
        in feature f : A;
        out feature g : A;
    }
    type B ~ A {}
    type C ~ B {}
}
