crates/kermlc/tests/fixtures/invalid/chain_bad_member.kerml
package P {
    type A {
        feature x : A;
    }
    type B {
        feature a : A;
        feature bad chains a.nonexistent;
    }
}
